# Continuous-Supply-Chain-Trust-Verifier

./: .dockerignore  .env.development  .env.example  .gitignore  Cargo.toml  Makefile  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml
.cargo/: audit.toml  config.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: README.md  ci.yml  docker.yml  release.yml  security.yml
crates/sctv-api/: Cargo.toml
crates/sctv-api/src/: error.rs  lib.rs  main.rs  middleware.rs  state.rs
crates/sctv-api/src/auth/: mod.rs
crates/sctv-api/src/graphql/: mod.rs
crates/sctv-api/src/rest/: handlers.rs  mod.rs  models.rs
crates/sctv-api/tests/: api_integration.rs
crates/sctv-ci/: Cargo.toml
crates/sctv-ci/src/: lib.rs
crates/sctv-cli/: Cargo.toml
crates/sctv-cli/src/: main.rs  shared.rs
crates/sctv-cli/src/commands/: check.rs  mod.rs  policy.rs  scan.rs  verify.rs
crates/sctv-core/: Cargo.toml
crates/sctv-core/src/: lib.rs
crates/sctv-core/src/domain/: alert.rs  api_key.rs  attestation.rs  audit_log.rs  dependency.rs  job.rs  mod.rs  package.rs  policy.rs  project.rs  sbom.rs  tenant.rs  user.rs
crates/sctv-core/src/events/: domain_events.rs  mod.rs
crates/sctv-core/src/traits/: mod.rs  repository.rs  services.rs
crates/sctv-dashboard/: Cargo.toml
crates/sctv-dashboard/public/: index.html
crates/sctv-dashboard/src/: lib.rs  main.rs
crates/sctv-dashboard/src/components/: cards.rs  forms.rs  icons.rs  layout.rs  mod.rs  navigation.rs  status.rs
crates/sctv-dashboard/src/pages/: alerts.rs  mod.rs  not_found.rs  policies.rs  projects.rs  settings.rs
crates/sctv-dashboard/style/: main.css
crates/sctv-db/: Cargo.toml
crates/sctv-db/src/: lib.rs  pool.rs
crates/sctv-db/src/models/: mod.rs
crates/sctv-db/src/repositories/: alert_repo.rs  api_key_repo.rs  audit_log_repo.rs  dependency_repo.rs  job_repo.rs  mod.rs  package_repo.rs  policy_repo.rs  project_repo.rs  sbom_repo.rs  tenant_repo.rs  user_repo.rs
crates/sctv-db/tests/: audit_log_repo_tests.rs  job_repo_tests.rs  sbom_repo_tests.rs  user_repo_tests.rs
crates/sctv-db/tests/common/: mod.rs
crates/sctv-detectors/: Cargo.toml
crates/sctv-detectors/src/: lib.rs  traits.rs
crates/sctv-detectors/src/downgrade/: history.rs  mod.rs  policy.rs
crates/sctv-detectors/src/provenance/: attestation.rs  mod.rs  sigstore.rs  verification.rs
crates/sctv-detectors/src/tampering/: mod.rs
crates/sctv-detectors/src/typosquatting/: mod.rs
crates/sctv-notifications/: Cargo.toml
crates/sctv-notifications/src/: error.rs  lib.rs  service.rs  types.rs
crates/sctv-notifications/src/channels/: email.rs  mod.rs  pagerduty.rs  slack.rs  teams.rs  webhook.rs
crates/sctv-notifications/tests/: channel_integration.rs
crates/sctv-registries/: Cargo.toml
crates/sctv-registries/src/: cache.rs  lib.rs  retry.rs  traits.rs
crates/sctv-registries/src/cargo/: client.rs  mod.rs  models.rs
crates/sctv-registries/src/go_modules/: client.rs  mod.rs  models.rs
crates/sctv-registries/src/maven/: client.rs  mod.rs  models.rs
crates/sctv-registries/src/npm/: client.rs  mod.rs  models.rs
crates/sctv-registries/src/nuget/: client.rs  mod.rs  models.rs
crates/sctv-registries/src/pypi/: client.rs  mod.rs  models.rs
crates/sctv-registries/src/rubygems/: client.rs  mod.rs  models.rs
crates/sctv-registries/tests/: registry_integration.rs
crates/sctv-registries/tests/common/: mod.rs
crates/sctv-sbom/: Cargo.toml
crates/sctv-sbom/src/: common.rs  lib.rs
crates/sctv-sbom/src/cyclonedx/: generator.rs  mod.rs  models.rs
crates/sctv-sbom/src/spdx/: generator.rs  mod.rs  models.rs
crates/sctv-worker/: Cargo.toml
crates/sctv-worker/src/: error.rs  lib.rs  main.rs  service.rs
crates/sctv-worker/src/executor/: mod.rs  registry.rs
crates/sctv-worker/src/executor/handlers/: mod.rs  monitor_registry.rs  scan_project.rs  send_notification.rs  verify_provenance.rs
crates/sctv-worker/src/jobs/: mod.rs  payloads.rs
crates/sctv-worker/src/pool/: mod.rs
crates/sctv-worker/src/queue/: mod.rs  postgres.rs
crates/sctv-worker/tests/: workflow_integration.rs
docker/: Dockerfile  README.md  api.Dockerfile  init-db.sql  worker.Dockerfile
docs/: DOCUMENTATION_SUMMARY.md  README.md
docs/api/: authentication.md  graphql-api.md  rest-api.md  webhooks.md
docs/architecture/: components.md  data-flow.md  database.md  overview.md
docs/development/: code-standards.md  contributing.md  setup.md  testing.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/operations/: backup.md  deployment.md  monitoring.md  security.md  troubleshooting.md
docs/reference/: cli-reference.md  configuration.md  ecosystems.md  error-codes.md  threat-types.md
docs/user-guide/: README.md  alerts.md  best-practices.md  dashboard.md  policies.md  projects.md  sbom.md
migrations/: 001_initial_schema.sql  002_enable_rls.sql  003_add_performance_indexes.sql  004_add_fk_indexes.sql  005_add_api_keys.sql
tests/: README.md
