[workspace]
resolver = "2"
members = [
    "crates/sctv-core",
    "crates/sctv-db",
    "crates/sctv-registries",
    "crates/sctv-detectors",
    "crates/sctv-sbom",
    "crates/sctv-api",
    "crates/sctv-worker",
    "crates/sctv-notifications",
    "crates/sctv-ci",
    "crates/sctv-cli",
    "crates/sctv-dashboard",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Supply Chain Trust Verifier Team"]
repository = "https://github.com/example/supply-chain-trust-verifier"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.50", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Web framework
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }

# GraphQL
async-graphql = { version = "7.2", features = ["chrono", "uuid", "tracing"] }
async-graphql-axum = "7.2"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "migrate"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
quick-xml = { version = "0.39", features = ["serialize"] }

# HTTP client
reqwest = { version = "0.13", features = ["json", "gzip"] }

# Cryptography & Security
sha2 = "0.10"
sha1 = "0.10"
ring = "0.17"
jsonwebtoken = "10.2"
base64 = "0.22"
hex = "0.4"

# SBOM formats
cyclonedx-bom = "0.6"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.24"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Utilities
uuid = { version = "1.23", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
anyhow = "1.0"
strum = { version = "0.26", features = ["derive"] }
semver = { version = "1.0", features = ["serde"] }
url = { version = "2.5", features = ["serde"] }
strsim = "0.11"
regex = "1.12"
once_cell = "1.21"
parking_lot = "0.12"
dashmap = "6.1"
bytes = "1.11"

# Testing
mockall = "0.13"
wiremock = "0.6"
testcontainers = "0.27"

# Leptos web framework
leptos = { version = "0.7" }
leptos_meta = { version = "0.7" }
leptos_router = { version = "0.7" }
leptos_axum = { version = "0.7" }

# WASM support
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
web-sys = "0.3"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
