[workspace]
resolver = "2"
members = [
    "crates/sctv-core",
    "crates/sctv-db",
    "crates/sctv-registries",
    "crates/sctv-detectors",
    "crates/sctv-sbom",
    "crates/sctv-api",
    "crates/sctv-worker",
    "crates/sctv-notifications",
    "crates/sctv-ci",
    "crates/sctv-cli",
    "crates/sctv-dashboard",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Supply Chain Trust Verifier Team"]
repository = "https://github.com/example/supply-chain-trust-verifier"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.50", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Web framework
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }

# GraphQL
async-graphql = { version = "7.2", features = ["chrono", "uuid", "tracing"] }
async-graphql-axum = "7.2"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "migrate"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
quick-xml = { version = "0.39", features = ["serialize"] }

# HTTP client
# default-features disabled to avoid pulling unused transitive dependencies
# (e.g. http3/quinn-proto, system-proxy). Explicitly list the features we
# actually use: rustls-based TLS, HTTP/2, JSON, and gzip.
reqwest = { version = "0.13", default-features = false, features = ["rustls", "http2", "json", "gzip", "charset"] }

# Cryptography & Security
sha2 = "0.10"
sha1 = "0.10"
ring = "0.17"
# aws_lc_rs backend avoids rsa/rust_crypto chain (RUSTSEC-2023-0071 Marvin Attack).
# We only use HMAC-SHA256 JWTs (Header::default / Validation::default), which aws_lc_rs supports.
jsonwebtoken = { version = "10.3", default-features = false, features = ["aws_lc_rs"] }
base64 = "0.22"
hex = "0.4"

# SBOM formats
cyclonedx-bom = "0.6"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.24"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Utilities
uuid = { version = "1.23", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
anyhow = "1.0"
strum = { version = "0.26", features = ["derive"] }
semver = { version = "1.0", features = ["serde"] }
url = { version = "2.5", features = ["serde"] }
strsim = "0.11"
regex = "1.12"
once_cell = "1.21"
parking_lot = "0.12"
dashmap = "6.1"
bytes = "1.11"

# Testing
mockall = "0.13"
wiremock = "0.6"
testcontainers = "0.27"

# Leptos web framework
leptos = { version = "0.8" }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8" }
leptos_axum = { version = "0.8" }

# WASM support
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
web-sys = "0.3"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
