[package]
name = "sctv-api"
description = "REST and GraphQL API for Supply Chain Trust Verifier"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "sctv-api"
path = "src/main.rs"

[dependencies]
sctv-core = { path = "../sctv-core", features = ["graphql"] }
sctv-db = { path = "../sctv-db" }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# GraphQL
async-graphql = { workspace = true }
async-graphql-axum = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Auth
jsonwebtoken = { workspace = true }

# Database
sqlx = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
semver = { workspace = true }
url = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tower = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }

[lints]
workspace = true
