[package]
name = "sctv-cli"
description = "Command-line interface for Supply Chain Trust Verifier"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "sctv"
path = "src/main.rs"

[dependencies]
sctv-core = { path = "../sctv-core" }
sctv-detectors = { path = "../sctv-detectors" }
sctv-registries = { path = "../sctv-registries" }

# CLI
clap = { workspace = true }

# Async
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Output
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Utilities
anyhow = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
