[package]
name = "sctv-core"
description = "Core domain models and business logic for Supply Chain Trust Verifier"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
graphql = ["dep:async-graphql"]

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
strum = { workspace = true }
semver = { workspace = true }
url = { workspace = true }

# Async
async-trait = { workspace = true }

# Binary data
bytes = { workspace = true }

# GraphQL (optional)
async-graphql = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
