[package]
name = "sctv-db"
description = "Database layer for Supply Chain Trust Verifier"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sctv-core = { path = "../sctv-core" }

# Database
sqlx = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
semver = { workspace = true }
url = { workspace = true }

[dev-dependencies]
testcontainers = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[lints]
workspace = true
