[package]
name = "sctv-detectors"
description = "Threat detection engines for Supply Chain Trust Verifier"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sctv-core = { path = "../sctv-core" }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# String similarity
strsim = { workspace = true }

# Crypto
sha2 = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }

# Data
bytes = { workspace = true }

# Utilities
thiserror = { workspace = true }
tracing = { workspace = true }
semver = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
